preflight/tests/ui/fail-wrong-impl.stderr
error: expected a trait implementation of `Avionics`
  --> $DIR/fail-wrong-impl.rs:15:6
   |
15 | impl Cool for Controller {}
   |      ^^^^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-wrong-impl.rs:1:35
  |
1 | use preflight::{avionics_harness, Avionics, Control, Sensors};
  |                                   ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
